--- a/src/index.html
+++ b/src/index.html
@@ -76,9 +76,9 @@
       </div>
     </footer>
 
-    <script src="fetchers.js"></script>
-    <script src="render.js"></script>
-    <script src="main.js"></script>
+    <script src="scripts/fetchers.js"></script>
+    <script src="scripts/render.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 
 </html>
