--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,28 @@
               <dd data-key="lieu-deces"></dd>
             </div>
           </dl>
+          <dl class="famille-attributs">
+            <div>
+              <dt>Père</dt>
+              <dd data-key="pere"></dd>
+            </div>
+            <div>
+              <dt>Mère</dt>
+              <dd data-key="mere"></dd>
+            </div>
+            <div>
+              <dt>Fratrie</dt>
+              <dd data-key="fratrie"></dd>
+            </div>
+            <div>
+              <dt>Conjoint</dt>
+              <dd data-key="conjoint"></dd>
+            </div>
+            <div>
+              <dt>Enfants</dt>
+              <dd data-key="enfants"></dd>
+            </div>
+          </dl>
         </div>
       </article>
 
