--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="colonne-perso">
-          <img data-key="personne-image" src="" alt="Valéry Giscard d'Estaing">
+          <img data-key="image-personne" src="" alt="Valéry Giscard d'Estaing">
 
           <dl class="biographie-attributs">
             <div>
