--- a/src/profil.html
+++ b/src/profil.html
@@ -88,6 +88,7 @@
 
     <script src="scripts/fetchers.js"></script>
     <script src="scripts/render.js"></script>
+    <script src="scripts/requetes.js"></script>
     <script src="scripts/profil.js"></script>
   </body>
 
