Affichage des mandats politiques

--- a/src/profil.html
+++ b/src/profil.html
@@ -32,6 +32,12 @@
       <div class="colonne-politique">
         <h2 class="nom" data-key="nom"></h2>
         <div data-key="description"></div>
+        <div>
+          <ul id="positionsList">
+
+          </ul>
+        </div>
+
       </div>
 
       <div class="colonne-perso">
