--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="brand">
-        <h1>Polit’IF</h1>
+        <h1><a href="index.html">Polit’IF</a></h1>
         <p class="h3">Le moteur de recherche de la politique française</p>
       </div>
 
