affichage des dates des mandats

--- a/src/profil.html
+++ b/src/profil.html
@@ -33,6 +33,8 @@
         <h2 class="nom" data-key="nom"></h2>
         <div data-key="description"></div>
         <div>
+          <br>
+          <h2>Mandats politiques</h2>
           <ul id="positionsList">
 
           </ul>
