--- a/src/profil.html
+++ b/src/profil.html
@@ -54,11 +54,11 @@
             <dt>Lieu de naissance</dt>
             <dd data-key="lieu-naissance"></dd>
           </div>
-          <div>
+          <div data-contains-slot="date-deces">
             <dt>Date de décès</dt>
             <dd data-key="date-deces"></dd>
           </div>
-          <div>
+          <div data-contains-slot="lieu-deces">
             <dt>Lieu de décès</dt>
             <dd data-key="lieu-deces"></dd>
           </div>
