Exemple LREM statique

--- a/src/parti.html
+++ b/src/parti.html
@@ -28,59 +28,75 @@
       </nav>
     </header>
 
-    <main class="sheet profil">
+    <main class="sheet profil" style="border: 3px solid #FFD700;">
       <div class="colonne-politique">
-        <h2 class="nom" data-key="nom"></h2>
-        <div data-key="description"></div>
+        <h2 class="nom" data-key="nom">La République en marche !</h2>
+        <div data-key="description">La République en marche (abrégée en LREM ou LaREM, parfois REM, voire LRM) — également appelée par sa première dénomination En marche (EM) — est un parti politique français lancé en avril 2016 par Emmanuel Macron.
+          Après avoir été élu président de la République en 2017, Emmanuel Macron démissionne de la présidence du mouvement qu'il a fondé. Le parti remporte une majorité absolue aux élections législatives qui suivent. Son actuel délégué général est Stanislas Guerini.
+          Le parti est classé du centre gauche au centre droit de l'échiquier politique français et parfois présenté comme un parti attrape-tout. </div>
+        <h3>Personnalités notables</h3>
         <div>
-          <ul id="positionsList">
-
+          <ul id="membres-mportants">
+            <li>Emmanuel Macron</li>
+            <li>Catherine Barbaroux</li>
+            <li>Christophe Castaner</li>
+            <li>Stanislas Guerini</li>
           </ul>
         </div>
 
       </div>
 
       <div class="colonne-perso">
-        <img data-key="image-personne" src="" alt="Valéry Giscard d'Estaing">
+        <img data-key="image-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Logo-LREM-noir.svg/1920px-Logo-LREM-noir.svg.png" alt="Logo LREM">
 
         <dl class="biographie-attributs">
           <div>
-            <dt>Date de naissance</dt>
-            <dd data-key="date-naissance"></dd>
+            <dt>Présidé par</dt>
+            <dd data-key="président">Stanislas Guerini</dd>
           </div>
           <div>
-            <dt>Lieu de naissance</dt>
-            <dd data-key="lieu-naissance"></dd>
+            <dt>Fondé par</dt>
+            <dd data-key="fondateur">Emmanuel Macron</dd>
           </div>
           <div>
-            <dt>Date de décès</dt>
-            <dd data-key="date-deces"></dd>
+            <dt>Date de création</dt>
+            <dd data-key="date-creation">6 avril 2016</dd>
           </div>
           <div>
-            <dt>Lieu de décès</dt>
-            <dd data-key="lieu-deces"></dd>
+            <dt>Date de dissolution</dt>
+            <dd data-key="date-dissolution">N/A</dd>
           </div>
+
         </dl>
         <dl class="famille-attributs">
           <div>
-            <dt>Père</dt>
-            <dd data-key="pere"></dd>
+            <dt>Nombre d'adhérents</dt>
+            <dd data-key="nombre-adherents">407 852 <br/> le 6 décembre 2018</dd>
           </div>
           <div>
-            <dt>Mère</dt>
-            <dd data-key="mere"></dd>
+            <dt>Positionnement politique</dt>
+            <dd data-key="alignement">Centre</dd>
           </div>
           <div>
-            <dt>Fratrie</dt>
-            <dd data-key="fratrie"></dd>
+            <dt>Idéologie(s) politique(s)</dt>
+            <dd data-key="fratrie">
+              <dl>
+                <dd>Social-libéralisme</dd>
+                <dd>Progressisme</dd>
+                <dd>Troisième Voie</dd>
+                <dd>Europhilie</dd>
+                <dd>Transpartisianisme</dd>
+                <dd>Écologisme</dd>
+              </dl>
+            </dd>
           </div>
           <div>
-            <dt>Conjoint</dt>
-            <dd data-key="conjoint"></dd>
+            <dt>Site web</dt>
+            <dd data-key="site-web"><a href="https://en-marche.fr">https://en-marche.fr</a></dd>
           </div>
           <div>
-            <dt>Enfants</dt>
-            <dd data-key="enfants"></dd>
+            <dt>Siège</dt>
+            <dd data-key="siege">63, rue Sainte Anne <br/> 75002 Paris</dd>
           </div>
         </dl>
       </div>
@@ -92,10 +108,10 @@
       </div>
     </footer>
 
-    <script src="scripts/fetchers.js"></script>
-    <script src="scripts/render.js"></script>
-    <script src="scripts/requetes.js"></script>
-    <script src="scripts/profil.js"></script>
+<!--    <script src="scripts/fetchers.js"></script>-->
+<!--    <script src="scripts/render.js"></script>-->
+<!--    <script src="scripts/requetes.js"></script>-->
+<!--    <script src="scripts/profil.js"></script>-->
   </body>
 
 </html>
