affichage partis politiques

--- a/src/profil.html
+++ b/src/profil.html
@@ -85,6 +85,13 @@
             <dd data-key="enfants"></dd>
           </div>
         </dl>
+
+        <div>
+          <h2>Partis politiques</h2>
+          <ul id="partisList">
+
+          </ul>
+        </div>
       </div>
     </main>
 
