--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/colors.css" />
     <link rel="stylesheet" href="styles/utility.css" />
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/colonnes.css" />
     <link rel="stylesheet" href="styles/profil.css" />
     <link rel="stylesheet" href="styles/recherche.css" />
   </head>
