--- a/src/parti.html
+++ b/src/parti.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="styles/colors.css" />
     <link rel="stylesheet" href="styles/utility.css" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="stylesheet" href="styles/profil.css" />
-    <link rel="stylesheet" href="styles/recherche.css" />
+    <link rel="stylesheet" href="styles/colonnes.css" />
+    <link rel="stylesheet" href="styles/parti.css" />
+    <link rel="stylesheet" href="styles/loading.css" />
   </head>
 
   <body>
@@ -28,31 +29,31 @@
       </nav>
     </header>
 
-    <main class="sheet profil" style="border: 3px solid #FFD700;">
-      <div class="colonne-politique">
+    <main class="sheet parti colonnes" style="--couleur-parti: #ffd700;">
+      <div class="colonne-principale">
         <h2 class="nom" data-key="nom">La République en marche !</h2>
+
         <div data-key="description">La République en marche (abrégée en LREM ou LaREM, parfois REM, voire LRM) — également appelée par sa première dénomination En marche (EM) — est un parti politique français lancé en avril 2016 par Emmanuel Macron.
           Après avoir été élu président de la République en 2017, Emmanuel Macron démissionne de la présidence du mouvement qu'il a fondé. Le parti remporte une majorité absolue aux élections législatives qui suivent. Son actuel délégué général est Stanislas Guerini.
-          Le parti est classé du centre gauche au centre droit de l'échiquier politique français et parfois présenté comme un parti attrape-tout. </div>
+          Le parti est classé du centre gauche au centre droit de l'échiquier politique français et parfois présenté comme un parti attrape-tout.</div>
+
         <h3>Personnalités notables</h3>
-        <div>
-          <ul id="membres-mportants">
-            <li>Emmanuel Macron</li>
-            <li>Catherine Barbaroux</li>
-            <li>Christophe Castaner</li>
-            <li>Stanislas Guerini</li>
-          </ul>
-        </div>
+        <ul data-key="membres-importants">
+          <li>Emmanuel Macron</li>
+          <li>Catherine Barbaroux</li>
+          <li>Christophe Castaner</li>
+          <li>Stanislas Guerini</li>
+        </ul>
 
       </div>
 
-      <div class="colonne-perso">
+      <div class="colonne-secondaire">
         <img data-key="image-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Logo-LREM-noir.svg/1920px-Logo-LREM-noir.svg.png" alt="Logo LREM">
 
         <dl class="biographie-attributs">
           <div>
             <dt>Présidé par</dt>
-            <dd data-key="président">Stanislas Guerini</dd>
+            <dd data-key="president">Stanislas Guerini</dd>
           </div>
           <div>
             <dt>Fondé par</dt>
@@ -71,32 +72,32 @@
         <dl class="famille-attributs">
           <div>
             <dt>Nombre d'adhérents</dt>
-            <dd data-key="nombre-adherents">407 852 <br/> le 6 décembre 2018</dd>
+            <dd data-key="nombre-adherents">407 852<br />le 6 décembre 2018</dd>
           </div>
           <div>
             <dt>Positionnement politique</dt>
-            <dd data-key="alignement">Centre</dd>
+            <dd data-key="positionnement">Centre</dd>
           </div>
           <div>
             <dt>Idéologie(s) politique(s)</dt>
-            <dd data-key="fratrie">
-              <dl>
-                <dd>Social-libéralisme</dd>
-                <dd>Progressisme</dd>
-                <dd>Troisième Voie</dd>
-                <dd>Europhilie</dd>
-                <dd>Transpartisianisme</dd>
-                <dd>Écologisme</dd>
-              </dl>
+            <dd data-key="ideologies">
+              <ul>
+                <li>Social-libéralisme</li>
+                <li>Progressisme</li>
+                <li>Troisième Voie</li>
+                <li>Europhilie</li>
+                <li>Transpartisianisme</li>
+                <li>Écologisme</li>
+              </ul>
             </dd>
           </div>
           <div>
             <dt>Site web</dt>
-            <dd data-key="site-web"><a href="https://en-marche.fr">https://en-marche.fr</a></dd>
+            <dd data-key="site-web"><a href="https://en-marche.fr">en-marche.fr</a></dd>
           </div>
           <div>
             <dt>Siège</dt>
-            <dd data-key="siege">63, rue Sainte Anne <br/> 75002 Paris</dd>
+            <dd data-key="siege">63, rue Sainte Anne<br />75002 Paris</dd>
           </div>
         </dl>
       </div>
@@ -108,10 +109,10 @@
       </div>
     </footer>
 
-<!--    <script src="scripts/fetchers.js"></script>-->
-<!--    <script src="scripts/render.js"></script>-->
-<!--    <script src="scripts/requetes.js"></script>-->
-<!--    <script src="scripts/profil.js"></script>-->
+    <script src="scripts/fetchers.js"></script>
+    <script src="scripts/render.js"></script>
+    <script src="scripts/requetes.js"></script>
+    <script src="scripts/parti.js"></script>
   </body>
 
 </html>
