--- a/src/profil.html
+++ b/src/profil.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="styles/colors.css" />
     <link rel="stylesheet" href="styles/utility.css" />
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="styles/colonnes.css" />
     <link rel="stylesheet" href="styles/profil.css" />
-    <link rel="stylesheet" href="styles/recherche.css" />
+    <link rel="stylesheet" href="styles/loading.css" />
   </head>
 
   <body>
@@ -28,8 +29,8 @@
       </nav>
     </header>
 
-    <main class="sheet profil">
-      <div class="colonne-politique">
+    <main class="sheet profil colonnes">
+      <div class="colonne-principale">
         <h2 class="nom" data-key="nom"></h2>
         <div data-key="description"></div>
         <div>
@@ -42,7 +43,7 @@
 
       </div>
 
-      <div class="colonne-perso">
+      <div class="colonne-secondaire">
         <img data-key="image-personne" src="" alt="Valéry Giscard d'Estaing">
 
         <dl class="biographie-attributs">
