ajout signature sur le profil

--- a/src/profil.html
+++ b/src/profil.html
@@ -92,6 +92,10 @@
 
           </ul>
         </div>
+        <div>
+          <h4>Signature</h4>
+          <img data-key="signature-personne" src="" alt="">
+        </div>
       </div>
     </main>
 
