Ajout couleur du parti

--- a/src/parti.html
+++ b/src/parti.html
@@ -29,7 +29,7 @@
       </nav>
     </header>
 
-    <main class="sheet parti colonnes" style="--couleur-parti: #ffd700;">
+    <main class="sheet parti colonnes" data-key="couleur" style="--couleur-parti: transparent;">
       <div class="colonne-principale">
         <h2 class="nom" data-key="nom">La République en marche !</h2>
 
