petites améliorations styles

--- a/src/parti.html
+++ b/src/parti.html
@@ -30,9 +30,9 @@
       </nav>
     </header>
 
-    <main class="sheet parti colonnes" data-key="couleur" style="--couleur-parti: transparent;">
+    <main class="sheet parti colonnes" data-key="couleur">
       <div class="colonne-principale">
-        <h2 class="nom" data-key="nom">La République en marche !</h2>
+        <h2 class="nom" data-key="nom"></h2>
 
         <div data-key="description"></div>
 
@@ -42,7 +42,7 @@
       </div>
 
       <div class="colonne-secondaire">
-        <img data-key="image-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/Logo-LREM-noir.svg/1920px-Logo-LREM-noir.svg.png" alt="Logo LREM">
+        <img data-key="image-logo" src="" alt="Logo du parti">
 
         <dl class="biographie-attributs">
           <div>
