--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           </button>
         </div>
 
-        <div id="searchResultsContainer">
+        <div id="searchResultsContainer" n-personnalites="0" n-partis="0" n-ideologies="0">
           <h4 id="searchResultsPersonnalitesTitle">Personnalités politiques</h4>
           <ul id="searchResultsPersonnalites"></ul>
 
