--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,14 @@
         </div>
 
         <div id="searchResultsContainer" n-personnalites="0" n-partis="0" n-ideologies="0">
-          <h4 id="searchResultsPersonnalitesTitle">Personnalités politiques</h4>
-          <ul id="searchResultsPersonnalites"></ul>
-
-          <h4 id="searchResultsPartisTitle">Partis</h4>
-          <ul id="searchResultsPartis"></ul>
+          <div id="resultats-personnalites">
+            <h4>Personnalités politiques</h4>
+            <ul id="searchResultsPersonnalites"></ul>
+          </div>
+          <div id="resultats-partis">
+            <h4>Partis</h4>
+            <ul id="searchResultsPartis"></ul>
+          </div>
         </div>
       </div>
     </main>
