Personnalités notables clickables

--- a/src/parti.html
+++ b/src/parti.html
@@ -38,7 +38,11 @@
 
         <br />
         <h3>Personnalités notables</h3>
-        <div data-key="membres-importants"></div>
+        <div>
+          <ul id="membresList">
+
+          </ul>
+        </div>
       </div>
 
       <div class="colonne-secondaire">
