Idéologies du parti clickables (dans le vide)

--- a/src/parti.html
+++ b/src/parti.html
@@ -78,7 +78,11 @@
           </div>
           <div>
             <dt>Idéologie(s) politique(s)</dt>
-            <dd data-key="ideologies"></dd>
+            <dd data-key="ideologies">
+              <ul id="ideologiesList">
+
+              </ul>
+            </dd>
           </div>
           <div>
             <dt>Site web</dt>
