--- a/src/parti.html
+++ b/src/parti.html
@@ -38,7 +38,7 @@
 
         <br />
         <h3>Personnalités notables</h3>
-        <div>
+        <div data-key="membres-importants">
           <ul id="membresList">
 
           </ul>
