--- a/src/parti.html
+++ b/src/parti.html
@@ -94,6 +94,7 @@
       </div>
     </footer>
 
+    <script src="scripts/Slots.js"></script>
     <script src="scripts/fetchers.js"></script>
     <script src="scripts/render.js"></script>
     <script src="scripts/requetes.js"></script>
