--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,11 @@
 
         <div id="searchResultsContainer" n-personnalites="0" n-partis="0" n-ideologies="0">
           <div id="resultats-personnalites">
-            <h4>Personnalités politiques</h4>
+            <h3>Personnalités politiques</h3>
             <ul id="searchResultsPersonnalites"></ul>
           </div>
           <div id="resultats-partis">
-            <h4>Partis</h4>
+            <h3>Partis</h3>
             <ul id="searchResultsPartis"></ul>
           </div>
         </div>
@@ -63,6 +63,7 @@
       </div>
     </footer>
 
+    <script src="scripts/Slots.js"></script>
     <script src="scripts/fetchers.js"></script>
     <script src="scripts/render.js"></script>
     <script src="scripts/requetes.js"></script>
