--- a/src/ideologie.html
+++ b/src/ideologie.html
@@ -30,14 +30,14 @@
       </nav>
     </header>
 
-    <main class="sheet parti colonnes" data-key="couleur">
+    <main class="sheet ideologie colonnes" data-key="couleur">
       <div class="colonne-principale">
         <h2 class="nom" data-key="nom"></h2>
 
         <div data-key="description"></div>
 
         <br />
-        <h3>Personnalités notables</h3>
+        <h3>Idéologies apparentées</h3>
         <div data-key="membres-importants">
           <ul id="membresList">
 
@@ -47,52 +47,6 @@
 
       <div class="colonne-secondaire">
         <img data-key="image-logo" src="" alt="Logo du parti">
-
-        <dl class="biographie-attributs">
-          <div>
-            <dt>Présidé par</dt>
-            <dd data-key="president"></dd>
-          </div>
-          <div>
-            <dt>Fondé par</dt>
-            <dd data-key="fondateur"></dd>
-          </div>
-          <div data-contains-slot="date-creation">
-            <dt>Date de création</dt>
-            <dd data-key="date-creation"></dd>
-          </div>
-          <div data-contains-slot="date-dissolution">
-            <dt>Date de dissolution</dt>
-            <dd data-key="date-dissolution"></dd>
-          </div>
-
-        </dl>
-        <dl class="famille-attributs">
-          <div>
-            <dt>Nombre d'adhérents</dt>
-            <dd data-key="nombre-adherents">407 852<br />le 6 décembre 2018</dd>
-          </div>
-          <div>
-            <dt>Positionnement politique</dt>
-            <dd data-key="positionnement"></dd>
-          </div>
-          <div>
-            <dt>Idéologie(s) politique(s)</dt>
-            <dd data-key="ideologies">
-              <ul id="ideologiesList">
-
-              </ul>
-            </dd>
-          </div>
-          <div>
-            <dt>Site web</dt>
-            <dd><a data-key="site-web" href="https://en-marche.fr">en-marche.fr</a></dd>
-          </div>
-          <div>
-            <dt>Siège</dt>
-            <dd data-key="siege">63, rue Sainte Anne<br />75002 Paris</dd>
-          </div>
-        </dl>
       </div>
     </main>
 
