améliorations page profil/parti

--- a/src/parti.html
+++ b/src/parti.html
@@ -38,11 +38,7 @@
 
         <br />
         <h3>Personnalités notables</h3>
-        <div data-key="membres-importants">
-          <ul id="membresList">
-
-          </ul>
-        </div>
+        <div data-key="membres-importants"></div>
       </div>
 
       <div class="colonne-secondaire">
@@ -70,7 +66,7 @@
         <dl class="famille-attributs">
           <div>
             <dt>Nombre d'adhérents</dt>
-            <dd data-key="nombre-adherents">407 852<br />le 6 décembre 2018</dd>
+            <dd data-key="nombre-adherents"></dd>
           </div>
           <div>
             <dt>Positionnement politique</dt>
@@ -78,19 +74,15 @@
           </div>
           <div>
             <dt>Idéologie(s) politique(s)</dt>
-            <dd data-key="ideologies">
-              <ul id="ideologiesList">
-
-              </ul>
-            </dd>
+            <dd data-key="ideologies"></dd>
           </div>
           <div>
             <dt>Site web</dt>
-            <dd><a data-key="site-web" href="https://en-marche.fr">en-marche.fr</a></dd>
+            <dd><a data-key="site-web" href=""></a></dd>
           </div>
           <div>
             <dt>Siège</dt>
-            <dd data-key="siege">63, rue Sainte Anne<br />75002 Paris</dd>
+            <dd data-key="siege"></dd>
           </div>
         </dl>
       </div>
