--- a/src/parti.html
+++ b/src/parti.html
@@ -45,11 +45,11 @@
         <img data-key="image-logo" src="" alt="Logo du parti">
 
         <dl class="biographie-attributs">
-          <div>
+          <div data-contains-slot="president">
             <dt>Présidé par</dt>
             <dd data-key="president"></dd>
           </div>
-          <div>
+          <div data-contains-slot="fondateur">
             <dt>Fondé par</dt>
             <dd data-key="fondateur"></dd>
           </div>
@@ -64,23 +64,23 @@
 
         </dl>
         <dl class="famille-attributs">
-          <div>
+          <div data-contains-slot="nombre-adherents">
             <dt>Nombre d'adhérents</dt>
             <dd data-key="nombre-adherents"></dd>
           </div>
-          <div>
+          <div data-contains-slot="positionnement">
             <dt>Positionnement politique</dt>
             <dd data-key="positionnement"></dd>
           </div>
-          <div>
+          <div data-contains-slot="ideologies">
             <dt>Idéologie(s) politique(s)</dt>
             <dd data-key="ideologies"></dd>
           </div>
-          <div>
+          <div data-contains-slot="site">
             <dt>Site web</dt>
             <dd><a data-key="site-web" href=""></a></dd>
           </div>
-          <div>
+          <div data-contains-slot="siege">
             <dt>Siège</dt>
             <dd data-key="siege"></dd>
           </div>
