cartes sur la page d'accueil/recherche

--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,26 @@
           </div>
         </div>
       </div>
+
+      <aside class="home-cards">
+        <article class="home-card">
+          <img src="favicon.ico" alt="" class="home-card__icon" />
+          <a href="" class="home-card__title">Emmanuel Macron</a>
+          <a href="" class="home-card__subtitle">La République en Marche</a>
+        </article>
+
+        <article class="home-card">
+          <img src="favicon.ico" alt="" class="home-card__icon" />
+          <a href="" class="home-card__title">Jean-Luc Mélenchon</a>
+          <a href="" class="home-card__subtitle">La France Insoumise</a>
+        </article>
+
+        <article class="home-card">
+          <img src="favicon.ico" alt="" class="home-card__icon" />
+          <a href="" class="home-card__title">Marine Le Pen</a>
+          <a href="" class="home-card__subtitle">Le Rassemblement National</a>
+        </article>
+      </aside>
     </main>
 
     <footer>
