Ideologie -- Description + Nom + Image

--- a/src/ideologie.html
+++ b/src/ideologie.html
@@ -37,16 +37,15 @@
         <div data-key="description"></div>
 
         <br />
-        <h3>Idéologies apparentées</h3>
-        <div data-key="membres-importants">
-          <ul id="membresList">
+        <h3>Idéologies dérivées</h3>
+        <div data-key="ideologies-derivees"></div>
 
-          </ul>
-        </div>
+        <h3>Idéologies parentes</h3>
+        <div data-key="ideologies-parentes"></div>
       </div>
 
       <div class="colonne-secondaire">
-        <img data-key="image-logo" src="" alt="Logo du parti">
+        <img data-key="image-logo" src="" alt="Image de l'idéologie">
       </div>
     </main>
 
@@ -60,7 +59,7 @@
     <script src="scripts/fetchers.js"></script>
     <script src="scripts/render.js"></script>
     <script src="scripts/requetes.js"></script>
-    <script src="scripts/parti.js"></script>
+    <script src="scripts/ideologie.js"></script>
   </body>
 
 </html>
