--- a/src/ideologie.html
+++ b/src/ideologie.html
@@ -49,7 +49,7 @@
       </div>
 
       <div class="colonne-secondaire">
-        <img data-key="image-logo" src="" alt="Image de l'idéologie">
+        <img data-key="image-logo" src="" alt="">
       </div>
     </main>
 
