--- a/src/parti.html
+++ b/src/parti.html
@@ -37,8 +37,10 @@
         <div data-key="description"></div>
 
         <br />
-        <h3>Personnalités notables</h3>
-        <div data-key="membres-importants"></div>
+        <div data-contains-slot="membres-importants">
+          <h3>Personnalités notables</h3>
+          <div data-key="membres-importants"></div>
+        </div>
       </div>
 
       <div class="colonne-secondaire">
