fetchers.js + render.js -> (ideologie | parti | profil).js + utils.js

--- a/src/ideologie.html
+++ b/src/ideologie.html
@@ -60,8 +60,7 @@
     </footer>
 
     <script src="scripts/Slots.js"></script>
-    <script src="scripts/fetchers.js"></script>
-    <script src="scripts/render.js"></script>
+    <script src="scripts/utils.js"></script>
     <script src="scripts/requetes.js"></script>
     <script src="scripts/ideologie.js"></script>
   </body>
