--- a/src/index.html
+++ b/src/index.html
@@ -45,12 +45,12 @@
         </div>
 
         <div id="searchResultsContainer" n-profils="0" n-partis="0" n-ideologies="0">
-          <div data-contains-slot="resultats-profils">
+          <div class="recherche-categorie" data-contains-slot="resultats-profils">
             <h3>Personnalités politiques</h3>
             <div data-key="resultats-profils"></div>
           </div>
 
-          <div data-contains-slot="resultats-partis">
+          <div class="recherche-categorie" data-contains-slot="resultats-partis">
             <h3>Partis</h3>
             <div data-key="resultats-partis"></div>
           </div>
