--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
         ),
         featuredTopic(
           'Q27978402', 'La France insoumise', 'parti',
-          'Q275595', 'Eco-socialisme', 'ideologie',
+          'Q275595', 'Éco-socialisme', 'ideologie',
           'https://upload.wikimedia.org/wikipedia/commons/3/3a/Logo_France_Insoumise.svg',
         ),
         featuredTopic(
@@ -100,17 +100,17 @@
         ),
         featuredTopic(
           'Q170972', 'Parti Socialiste', 'parti',
-          'Q121254', 'Social-Démocratie', 'ideologie',
+          'Q121254', 'Social-démocratie', 'ideologie',
           'https://upload.wikimedia.org/wikipedia/fr/f/fd/Ps-france-2016.svg',
         ),
         featuredTopic(
           'Q441791', 'Yannick Jadot', 'profil',
-          'Q613786', 'Europe Ecologie - Les Verts', 'parti',
+          'Q613786', 'Europe Écologie Les Verts', 'parti',
           'https://upload.wikimedia.org/wikipedia/commons/e/e8/YannickJadot.jpg',
         ),
         featuredTopic(
-          'Q613786', 'Europe Ecologie - Les Verts', 'parti',
-          'Q1661415', 'Ecologie politique', 'ideologie',
+          'Q613786', 'Europe Écologie Les Verts', 'parti',
+          'Q1661415', 'Écologie politique', 'ideologie',
           'https://upload.wikimedia.org/wikipedia/commons/f/fb/Europe_Ecologie-Les_Verts_Logo.svg',
         ),
         featuredTopic(
@@ -120,7 +120,7 @@
         ),
         featuredTopic(
           'Q587370', 'Mouvement Démocrate', 'parti',
-          'Q201712', 'Social-Libéralisme', 'ideologie',
+          'Q201712', 'Social-libéralisme', 'ideologie',
           'https://upload.wikimedia.org/wikipedia/commons/9/94/MoDem_logo.svg',
         ),
         featuredTopic(
